<resources>
    <string name="app_name">CryptoApp</string>
    <string name="coin_logo">Coin logo</string>
    <string name="symbols_template">%s / %s</string>
    <string name="last_update_template">Last update: %s</string>
    <string name="slash">/</string>
    <string name="price">Price:</string>
    <string name="minimum_price_per_day">Minimum price per day:</string>
    <string name="maximum_price_per_day">Maximum price per day:</string>
    <string name="last_market">Last market:</string>
    <string name="last_update">Last update:</string>
</resources>