<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoinDetailActivity">

    <ImageView
        android:id="@+id/imageViewLogoCoin"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/coin_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/textViewFromSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@android:color/holo_purple"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/textViewSlash"
        app:layout_constraintEnd_toStartOf="@id/textViewSlash"
        app:layout_constraintTop_toTopOf="@id/textViewSlash"
        tools:text="BTC" />

    <TextView
        android:id="@+id/textViewSlash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="@string/slash"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewLogoCoin" />

    <TextView
        android:id="@+id/textViewToSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/textViewSlash"
        app:layout_constraintStart_toEndOf="@id/textViewSlash"
        app:layout_constraintTop_toTopOf="@id/textViewSlash"
        tools:text="USD" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@id/textViewSlash">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/textViewPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/textViewPriceLabel"
                app:layout_constraintStart_toEndOf="@id/textViewPriceLabel"
                app:layout_constraintTop_toTopOf="@id/textViewPriceLabel"
                tools:text="@tools:sample/us_zipcodes" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="8dp"
                android:background="#63000000"
                app:layout_constraintTop_toBottomOf="@id/textViewPriceLabel" />

            <TextView
                android:id="@+id/textViewMinPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/minimum_price_per_day"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewPriceLabel" />

            <TextView
                android:id="@+id/textViewMinPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/textViewMinPriceLabel"
                app:layout_constraintStart_toEndOf="@id/textViewMinPriceLabel"
                app:layout_constraintTop_toTopOf="@id/textViewMinPriceLabel"
                tools:text="@tools:sample/us_zipcodes" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="8dp"
                android:background="#63000000"
                app:layout_constraintTop_toBottomOf="@id/textViewMinPriceLabel" />

            <TextView
                android:id="@+id/textViewMaxPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/maximum_price_per_day"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewMinPriceLabel" />

            <TextView
                android:id="@+id/textViewMaxPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/textViewMaxPriceLabel"
                app:layout_constraintStart_toEndOf="@id/textViewMaxPriceLabel"
                app:layout_constraintTop_toTopOf="@id/textViewMaxPriceLabel"
                tools:text="@tools:sample/us_zipcodes" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="8dp"
                android:background="#63000000"
                app:layout_constraintTop_toBottomOf="@id/textViewMaxPriceLabel" />

            <TextView
                android:id="@+id/textViewLastMarketLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/last_market"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewMaxPriceLabel" />

            <TextView
                android:id="@+id/textViewLastMarket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/textViewLastMarketLabel"
                app:layout_constraintStart_toEndOf="@id/textViewLastMarketLabel"
                app:layout_constraintTop_toTopOf="@id/textViewLastMarketLabel"
                tools:text="@tools:sample/us_zipcodes" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="8dp"
                android:background="#63000000"
                app:layout_constraintTop_toBottomOf="@id/textViewLastMarketLabel" />

            <TextView
                android:id="@+id/textViewLastUpdateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/last_update"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewLastMarketLabel" />

            <TextView
                android:id="@+id/textViewLastUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/textViewLastUpdateLabel"
                app:layout_constraintStart_toEndOf="@id/textViewLastUpdateLabel"
                app:layout_constraintTop_toTopOf="@id/textViewLastUpdateLabel"
                tools:text="@tools:sample/us_zipcodes" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="8dp"
                android:background="#63000000"
                app:layout_constraintTop_toBottomOf="@id/textViewLastUpdateLabel" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>